hot fix for iphone alignment

--- a/styles/default_index.css
+++ b/styles/default_index.css
@@ -57,7 +57,7 @@ p {
 
 .hero {
   align-self: center;
-  width: 50%;
+  width: 65%;
   height: 100%;
   padding: 32pt;
   display: flex;
